--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ms-auto"><p class="lead">Estudante de engenharia da computação na UFES, sigo aprendendo: sistemas embarcados, IOT, mobile, inteligência artificial. Em busca de um estágio na área de sistemas embarcados.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">Faço freelance nas seguintes áreas: automação com python, mobile, web e programação em geral. </p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">Faço freelance nas seguintes áreas: soluções em hardware (pic, arduino, esp etc), IOT, aplicações mobile. </p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
